--- a/currencyConvertor/package.json
+++ b/currencyConvertor/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://AbhijeetAundhakar.github.io/currency-convertor",
+  "homepage": "https://AbhijeetAundhakar.github.io/currencyConvertor",
   "name": "currencyconvertor",
   "private": true,
   "version": "0.0.0",
